# helpit

./: .gitignore  README.md  examples_usage.py  main.py  pyproject.toml  test_main.py
aihelp/: __init__.py  core.py
